# LightyLauncherLib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dev-release.yml
crates/auth/: Cargo.toml  README.md
crates/auth/docs/: azuriom.md  events.md  examples.md  exports.md  how-to-use.md  microsoft.md  offline.md  overview.md  trait.md
crates/auth/src/: auth.rs  azuriom.rs  errors.rs  lib.rs  microsoft.rs  offline.rs
crates/core/: Cargo.toml  README.md
crates/core/docs/: app_state.md  download.md  events.md  examples.md  exports.md  extract.md  hash.md  how-to-use.md  macros.md  overview.md  system.md
crates/core/src/: app_state.rs  download.rs  errors.rs  extract.rs  hash.rs  hosts.rs  lib.rs  macros.rs  system.rs
crates/event/: Cargo.toml  README.md
crates/event/docs/: architecture.md  events.md  examples.md  modules.md
crates/event/src/: errors.rs  lib.rs
crates/event/src/module/: auth.rs  console.rs  core.rs  java.rs  launch.rs  loader.rs  mod.rs
crates/java/: Cargo.toml  LICENSE  README.md
crates/java/docs/: distributions.md  examples.md  installation.md  overview.md  runtime.md
crates/java/src/: distribution.rs  errors.rs  jre_downloader.rs  lib.rs  runtime.rs
crates/java/src/distribution/: api_models.rs  mod.rs
crates/java/src/distribution/providers/: graalvm.rs  liberica.rs  mod.rs  temurin.rs  zulu.rs
crates/launch/: Cargo.toml  README.md
crates/launch/docs/: arguments.md  events.md  events_integration.md  exports.md  how-to-use.md  installation.md  instance-control.md  launch.md
crates/launch/src/: arguments.rs  errors.rs  installer.rs  launch.rs  lib.rs
crates/launch/src/arguments/: arguments.rs  mod.rs
crates/launch/src/installer/: assets.rs  client.rs  config.rs  downloader.rs  installer.rs  libraries.rs  mod.rs  mods.rs  natives.rs  verifier.rs
crates/launch/src/installer/processors/: forge_install.rs  mod.rs  processor.rs
crates/launch/src/installer/ressources/: assets.rs  client.rs  libraries.rs  mod.rs  mod_resolver.rs  mods.rs  natives.rs
crates/launch/src/instance/: console.rs  errors.rs  logs.rs  manager.rs  mod.rs  utilities.rs
crates/launch/src/launch/: builder.rs  config.rs  mod.rs  runner.rs  window.rs
crates/loaders/: Cargo.toml  README.md
crates/loaders/docs/: cache.md  caching.md  events.md  examples.md  exports.md  how-to-use.md  loaders.md  overview.md  query.md  traits.md
crates/loaders/docs/loaders/: fabric.md  forge.md  lighty_updater.md  neoforge.md  optifine.md  quilt.md  vanilla.md
crates/loaders/src/: lib.rs
crates/loaders/src/loaders/: mod.rs
crates/loaders/src/loaders/fabric/: fabric.rs  fabric_metadata.rs  mod.rs
crates/loaders/src/loaders/forge/: forge.rs  forge_legacy.rs  forge_legacy_metadata.rs  forge_metadata.rs  mod.rs
crates/loaders/src/loaders/lighty_updater/: lighty_metadata.rs  lighty_updater.rs  merge_metadata.rs  mod.rs
crates/loaders/src/loaders/neoforge/: mod.rs  neoforge.rs  neoforge_metadata.rs  patcher.rs
crates/loaders/src/loaders/optifine/: optifine.rs
crates/loaders/src/loaders/quilt/: mod.rs  quilt.rs  quilt_metadata.rs
crates/loaders/src/loaders/vanilla/: mod.rs  vanilla.rs  vanilla_metadata.rs
crates/loaders/src/mods/: mod.rs  request.rs  resolver.rs
crates/loaders/src/mods/curseforge/: curseforge.rs  curseforge_metadata.rs  mod.rs
crates/loaders/src/mods/modrinth/: mod.rs  modrinth.rs  modrinth_metadata.rs
crates/loaders/src/types/: instance_size.rs  loader.rs  loader_extensions.rs  mod.rs  version_info.rs  version_metadata.rs
crates/loaders/src/types/loader/: loader.rs  loader_extensions.rs  mod.rs
crates/loaders/src/types/version/: mod.rs  version_info.rs  version_metadata.rs
crates/loaders/src/utils/: cache.rs  error.rs  forge_installer.rs  forge_processor.rs  manifest.rs  maven.rs  mod.rs  query.rs  sha1.rs
crates/loaders/src/version/: macro_version.rs  mod.rs  version.rs
crates/tauri/: Cargo.toml  README.md  build.rs
crates/tauri/permissions/: default.toml
crates/tauri/permissions/autogenerated/: reference.md
crates/tauri/permissions/autogenerated/commands/: authenticate_azuriom.toml  authenticate_microsoft.toml  authenticate_offline.toml  check_version_exists.toml  get_java_distributions.toml  get_launcher_path.toml  get_loaders.toml  init_app_state.toml
crates/tauri/permissions/schemas/: schema.json
crates/tauri/src/: core.rs  events.rs  lib.rs  tauri_commands.rs
crates/tauri/src/commands/: java.rs  launch.rs  loaders.rs  mod.rs  path.rs  version.rs
crates/tauri/src/commands/auth/: azuriom.rs  microsoft.rs  mod.rs  offline.rs  types.rs
crates/tauri/src/commands/core/: init.rs  mod.rs
crates/tauri/src/commands/events/: events.rs  mod.rs
crates/tauri/src/commands/java/: distributions.rs  mod.rs
crates/tauri/src/commands/launch/: launcher.rs  mod.rs
crates/tauri/src/commands/loaders/: mod.rs
crates/tauri/src/commands/utils/: parse.rs
crates/tauri/src/commands/version/: builder.rs  lighty_builder.rs  mod.rs
crates/version/: Cargo.toml  README.md
crates/version/docs/: exports.md  how-to-use.md
crates/version/src/: lib.rs  lighty_builder.rs  loader_extensions_impl.rs  version_builder.rs
docs/: README.md  architecture.md  examples.md  reexports.md  sequence-diagrams.md
examples/: fabric.rs  forge.rs  forge_debug.rs  forge_legacy.rs  lighty_updater.rs  neoforge.rs  neoforge_after_1-21.rs  neoforge_before_1-20.rs  optifine.rs  quilt.rs  test_distributions.rs  vanilla.rs  vanilla_with_events.rs  with_events.rs
examples/auth/: azuriom.rs  custom.rs  microsoft.rs
examples/mods/: curseforge.rs  modrinth.rs
examples/with_events/: events.rs
examples/with_events/handlers/: auth.rs  console.rs  core.rs  instance.rs  java.rs  launch.rs  loader.rs  mod.rs
src/: lib.rs
src/java/: distribution.rs  errors.rs  jre_downloader.rs  mod.rs  runtime.rs
src/minecraft/: mod.rs
src/minecraft/auth/: offline.rs
src/minecraft/launch/: arguments.rs  errors.rs  installer.rs  launch.rs  (+1 more)
src/tauri/: core.rs  tauri_commands.rs
src/utils/: download.rs  errors.rs  extract.rs  macros.rs  mod.rs  system.rs
(+27 files in other folders)
