[workspace]
members = [
    "crates/core",
    "crates/auth",
    "crates/event",
    "crates/java",
    "crates/launch",
    "crates/loaders",
    "crates/version",
    "crates/tauri",
]
resolver = "2"

[workspace.package]
version = "0.8.6"
edition = "2021"
authors = ["Hamadi <dev.hamadipro@gmail.com>"]
license = "MIT"
repository = "https://github.com/Lighty-Launcher/LightyLauncherLib"
homepage = "https://github.com/Lighty-Launcher/LightyLauncherLib"
documentation = "https://docs.rs/lighty-launcher"
rust-version = "1.75"

[package]
name = "lighty-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "A modern minecraft launcher library supporting multiple mod loaders fabric quilt, forge, neoforge, vanilla, and more "
readme = "README.md"
keywords = ["minecraft", "launcher", "fabric", "forge", "neoforge"]
categories = ["command-line-utilities", "development-tools", "games", "api-bindings"]

[lib]
name = "lighty_launcher"
path = "src/lib.rs"

# ============================================
# WORKSPACE DEPENDENCIES
# ============================================

[workspace.dependencies]
# Internal crates
lighty-core = { version = "0.8.6", path = "crates/core" }
lighty-auth = { version = "0.8.6", path = "crates/auth" }
lighty-event = { version = "0.8.6", path = "crates/event" }
lighty-java = { version = "0.8.6", path = "crates/java" }
lighty-launch = { version = "0.8.6", path = "crates/launch" }
lighty-loaders = { version = "0.8.6", path = "crates/loaders" }
lighty-version = { version = "0.8.6", path = "crates/version" }
lighty-tauri = { version = "0.8.6", path = "crates/tauri" }

# ---- Async Runtime ----
tokio = { version = "1.48", features = [
    "rt-multi-thread",  #for Runtime multi-thread
    "macros",           #for #[tokio::main], #[tokio::test]
    "fs",               #for Filesystem async
    "io-util",          #for AsyncRead/Write utilities
    "process",          #for Lancer Java
    "sync",             #for oneshot, RwLock
    "time",             #for sleep, timeout
] }
tokio-util = { version = "0.7", features = ["compat"] }


# ---- HTTP Client ----
reqwest = { version = "0.12.24", default-features = false, features = [
    "http2",
    "rustls-tls",  #for Rustls au lieu d'OpenSSL (plus léger)
    "charset",
    "json",
    "stream",
    "gzip",
    "brotli",
    "zstd",
] }

# ---- Sérialisation ----
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ---- Async Utilities ----
futures = "0.3"
futures-util = { version = "0.3.31", features = ["io", "async-await-macro"] }
async-trait = "0.1"

# ---- Error Handling ----
thiserror = "2.0"
anyhow = "1.0"
# ---- Logging ----
tracing = { version = "0.1", features = ["log"] }

# ---- Filesystem & Compression ----
tokio-tar = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
zip = "6.0.0"
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "tokio-fs"] }
memmap2 = "0.9"

# ---- Cryptographie ----
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

# ---- Chemins & Noms de fichiers ----
directories = "6.0"
sanitize-filename = "0.6"
path-absolutize = "3.1"

# ---- Système & OS ----
os_info = "3"

# ---- Utilities ----
once_cell = "1.21"
version-compare = "0.2"
fastrand = "2.3"
rayon = "1.10"

# ---- Tauri ----
tauri = { version = "2" }
tauri-plugin = { version = "2" }

# ---- Dev dependencies ----
tokio-test = "0.4"
tempfile = "3.23"
criterion = { version = "0.5", features = ["html_reports"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ============================================
# MAIN PACKAGE DEPENDENCIES
# ============================================

[dependencies]
# Re-export internal crates
lighty-core = { workspace = true }
lighty-auth = { workspace = true }
lighty-event = { workspace = true, optional = true }
lighty-java = { workspace = true }
lighty-launch = { workspace = true }
lighty-loaders = { workspace = true }
lighty-version = { workspace = true }
lighty-tauri = { workspace = true, optional = true }

# Required for examples
tokio = { workspace = true }
directories = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true, optional = true }

# ============================================
# DEV DEPENDENCIES - Uniquement pour tests
# ============================================

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

# ============================================
# FEATURES - Activation optionnelle
# ============================================

[features]
# Loaders (forwarded to lighty-loaders)
vanilla = ["lighty-loaders/vanilla"]
fabric = ["lighty-loaders/fabric"]
quilt = ["lighty-loaders/quilt"]
neoforge = ["lighty-loaders/neoforge"]
forge = ["lighty-loaders/forge"]
forge_legacy = ["lighty-loaders/forge_legacy"]
lighty_updater = ["lighty-loaders/lighty_updater"]
all-loaders = ["lighty-loaders/all-loaders"]

# Tauri integration
tauri-commands = ["lighty-tauri", "lighty-tauri/tauri-commands"]

# Event system
events = ["lighty-event", "lighty-auth/events", "lighty-launch/events", "lighty-tauri/events"]

# Logging
tracing = [
    "dep:tracing",
    "lighty-core/tracing",
    "lighty-auth/tracing",
    "lighty-java/tracing",
    "lighty-launch/tracing",
    "lighty-loaders/tracing",
]

default = []

# ============================================
# PROFILS DE COMPILATION
# ============================================

[profile.dev]
opt-level = 0          # Pas d'optimisation en dev
debug = true           # Symboles de debug complets
split-debuginfo = "unpacked"  # Debug info séparé (plus rapide)
incremental = true     # Compilation incrémentale

[profile.dev.package."*"]
opt-level = 2          # Optimise les dépendances même en dev
debug = false          # Réduit la taille

[profile.release]
opt-level = 3          # Optimisation maximale
lto = "thin"           # Link Time Optimization (thin = bon compromis)
codegen-units = 1      # Meilleure optimisation (mais compile plus lent)
strip = "symbols"      # Supprime les symboles de debug
panic = "abort"        # Panic = abort (plus petit, plus rapide)

# Profil optimisé pour la taille
[profile.release-small]
inherits = "release"
opt-level = "z"        # Optimise pour la taille
lto = "fat"            # LTO agressif

# ============================================
# EXAMPLES
# ============================================

[[example]]
name = "with_events"
required-features = ["vanilla", "events", "tracing"]

[[example]]
name = "vanilla"
required-features = ["vanilla", "tracing"]

[[example]]
name = "fabric"
required-features = ["fabric", "tracing"]

[[example]]
name = "quilt"
required-features = ["quilt", "tracing"]

[[example]]
name = "neoforge"
required-features = ["neoforge", "tracing"]

[[example]]
name = "forge"
required-features = ["forge", "tracing"]

[[example]]
name = "forge_legacy"
required-features = ["forge_legacy", "tracing"]

[[example]]
name = "lighty_updater"
required-features = ["lighty_updater", "tracing"]

[[example]]
name = "optifine"
required-features = ["vanilla", "tracing"]
