[workspace]
members = [
    "crates/core",
    "crates/auth",
    "crates/event",
    "crates/java",
    "crates/launch",
    "crates/loaders",
    "crates/version",
]
resolver = "2"

[workspace.package]
version = "26.5.1"
edition = "2021"
authors = ["Hamadi <dev.hamadipro@gmail.com>"]
license = "MIT"
repository = "https://github.com/Lighty-Launcher/LightyLauncherLib"
homepage = "https://github.com/Lighty-Launcher/LightyLauncherLib"
documentation = "https://docs.rs/lighty-launcher"
rust-version = "1.75"

[package]
name = "lighty-launcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "A modern minecraft launcher library supporting multiple mod loaders fabric quilt, forge, neoforge, vanilla, and more "
readme = "README.md"
keywords = ["minecraft", "launcher", "fabric", "forge", "neoforge"]
categories = ["command-line-utilities", "development-tools", "games", "api-bindings"]

[lib]
name = "lighty_launcher"
path = "src/lib.rs"

# ============================================
# WORKSPACE DEPENDENCIES
# ============================================

[workspace.dependencies]
# Internal crates
lighty-core = { version = "26.5.1", path = "crates/core" }
lighty-auth = { version = "26.5.1", path = "crates/auth" }
lighty-event = { version = "26.5.1", path = "crates/event" }
lighty-java = { version = "26.5.1", path = "crates/java" }
lighty-launch = { version = "26.5.1", path = "crates/launch" }
lighty-loaders = { version = "26.5.1", path = "crates/loaders" }
lighty-version = { version = "26.5.1", path = "crates/version" }

# ---- Async Runtime ----
tokio = { version = "1.52", features = [
    "rt-multi-thread",  #for Runtime multi-thread
    "macros",           #for #[tokio::main], #[tokio::test]
    "fs",               #for Filesystem async
    "io-util",          #for AsyncRead/Write utilities
    "process",          #for spawning the Java process
    "sync",             #for oneshot, RwLock
    "time",             #for sleep, timeout
] }
tokio-util = { version = "0.7.18", features = ["compat"] }


# ---- HTTP Client ----
reqwest = { version = "0.13.3", default-features = false, features = [
    "http2",
    "rustls",  #for Rustls instead of OpenSSL (lighter)
    "charset",
    "json",
    "stream",
    "form",
    "gzip",
    "brotli",
    "zstd",
] }

# ---- Serialization ----
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ---- Async Utilities ----
futures = "0.3.32"
futures-util = { version = "0.3.32", features = ["io", "async-await-macro"] }
async-trait = "0.1.89"

# ---- Error Handling ----
thiserror = "2.0.18"
anyhow = "1.0.102"
# ---- Logging ----
tracing = { version = "0.1.44", features = ["log"] }

# ---- Filesystem & Compression ----
tokio-tar = "0.3.1"
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
zip = "6.0.0"
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "tokio-fs"] }
memmap2 = "0.9.10"

# ---- Cryptography ----
sha1 = "0.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22"

# ---- Paths & Filenames ----
# `dirs` instead of `directories`: same author/std but the API only
# exposes the platform-canonical bases (data/config/cache/home), no
# qualifier+organization+application triplet. We join the launcher
# name ourselves — see `crates/core/src/app_state.rs`.
dirs = "6.0.0"
sanitize-filename = "0.6.0"
path-absolutize = "3.1.1"

# ---- System & OS ----
os_info = "3.14"

# ---- Utilities ----
once_cell = "1.21"
version-compare = "0.2.1"
fastrand = "2.4"

# ---- Dev dependencies ----
tokio-test = "0.4.5"
tempfile = "3.27"
criterion = { version = "0.8", features = ["html_reports"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
# Used by examples/auth/* to demonstrate persisting tokens in the OS
# keychain (Linux Secret Service / macOS Keychain / Windows Credential Manager).
# Examples-only — the lib itself does NOT depend on keyring (storage
# policy is intentionally left to the consumer).
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }

# ============================================
# MAIN PACKAGE DEPENDENCIES
# ============================================

[dependencies]
# Re-export internal crates
lighty-core = { workspace = true }
lighty-auth = { workspace = true }
lighty-event = { workspace = true, optional = true }
lighty-java = { workspace = true }
lighty-launch = { workspace = true }
lighty-loaders = { workspace = true }
lighty-version = { workspace = true }

# Required for examples
tokio = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true, optional = true }

# ============================================
# DEV DEPENDENCIES - Tests only
# ============================================

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }

# ============================================
# FEATURES - Optional activation
# ============================================

[features]
# Loaders (forwarded to lighty-loaders)
vanilla = ["lighty-loaders/vanilla"]
fabric = ["lighty-loaders/fabric"]
quilt = ["lighty-loaders/quilt"]
# lighty-launch is enabled so the installer can run NeoForge post-install processors
neoforge = ["lighty-loaders/neoforge", "lighty-launch/neoforge"]
# lighty-launch is enabled so the installer can run Forge post-install
# processors. The same feature flag also covers legacy Forge (1.5.2 →
# 1.12.2) since the legacy parser lives inside the same crate path.
forge = ["lighty-loaders/forge", "lighty-launch/forge"]
lighty_updater = ["lighty-loaders/lighty_updater"]
# Mod sources (Modrinth public API, CurseForge keyed API).
# Each forwards into:
#   - lighty-loaders: API clients + resolver
#   - lighty-launch:  runner-side mod_resolver (event-aware bridge)
#   - lighty-version: matching .with_modrinth() / .with_curseforge() methods
modrinth = ["lighty-loaders/modrinth", "lighty-launch/modrinth", "lighty-version/modrinth"]
curseforge = ["lighty-loaders/curseforge", "lighty-launch/curseforge", "lighty-version/curseforge"]
all-mods = ["modrinth", "curseforge"]
all-loaders = [
    "lighty-loaders/all-loaders",
    "lighty-launch/modrinth", "lighty-launch/curseforge",
    "lighty-version/modrinth", "lighty-version/curseforge",
]

# Event system
events = ["lighty-event", "lighty-auth/events", "lighty-launch/events"]

# Logging
tracing = [
    "dep:tracing",
    "lighty-core/tracing",
    "lighty-auth/tracing",
    "lighty-java/tracing",
    "lighty-launch/tracing",
    "lighty-loaders/tracing",
]

default = []

# ============================================
# COMPILATION PROFILES
# ============================================

[profile.dev]
opt-level = 0          # No optimization in dev
debug = true           # Full debug symbols
split-debuginfo = "unpacked"  # Split debug info (faster)
incremental = true     # Incremental compilation

[profile.dev.package."*"]
opt-level = 2          # Optimize dependencies even in dev
debug = false          # Reduces binary size

[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link Time Optimization (thin = good tradeoff)
codegen-units = 1      # Better optimization (slower to compile)
strip = "symbols"      # Strip debug symbols
panic = "abort"        # Panic = abort (smaller, faster)

# Size-optimized profile
[profile.release-small]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = "fat"            # Aggressive LTO

# ============================================
# EXAMPLES
# ============================================

# --- Loaders (one example per loader, flat under examples/) ---

[[example]]
name = "vanilla"
required-features = ["vanilla", "tracing"]

[[example]]
name = "fabric"
required-features = ["fabric", "tracing"]

[[example]]
name = "quilt"
required-features = ["quilt", "tracing"]

[[example]]
name = "neoforge"
required-features = ["neoforge", "events", "tracing"]

[[example]]
name = "forge"
required-features = ["forge", "events", "tracing"]

[[example]]
name = "optifine"
required-features = ["vanilla", "tracing"]

[[example]]
name = "lighty_updater"
required-features = ["lighty_updater", "tracing"]

# --- Mod fetching (Modrinth / CurseForge), under examples/mods/ ---

[[example]]
name = "modrinth"
path = "examples/mods/modrinth.rs"
required-features = ["modrinth", "fabric", "tracing"]

[[example]]
name = "curseforge"
path = "examples/mods/curseforge.rs"
required-features = ["curseforge", "fabric", "tracing"]

# --- Full event-bus showcase, under examples/with_events/ ---

[[example]]
name = "with_events"
path = "examples/with_events/events.rs"
required-features = ["vanilla", "events", "tracing"]

# --- Auth + persistent "remember me" via OS keyring, under examples/auth/ ---

[[example]]
name = "auth_microsoft"
path = "examples/auth/microsoft.rs"
required-features = ["events", "tracing"]

[[example]]
name = "auth_azuriom"
path = "examples/auth/azuriom.rs"
required-features = ["events", "tracing"]

[[example]]
name = "auth_custom"
path = "examples/auth/custom.rs"
required-features = ["events", "tracing"]
