[package]
name = "lighty-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Authentication modules for Lighty Launcher"

[dependencies]
# Workspace crates
lighty-core = { workspace = true }
lighty-event = { workspace = true, optional = true }

# Async Runtime
tokio.workspace = true

# HTTP Client
reqwest.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Error Handling
thiserror.workspace = true

# Logging
tracing = { workspace = true, optional = true }

[features]
events = ["lighty-event"]
tracing = ["dep:tracing"]
