[package]
name = "lighty-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Core utilities for Lighty Launcher"

[dependencies]
# Workspace crates
lighty-event = { workspace = true, optional = true }

# Async Runtime
tokio.workspace = true
tokio-util.workspace = true

# HTTP Client
reqwest.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Error Handling
thiserror.workspace = true

# Logging
tracing = { workspace = true, optional = true }

# Filesystem & Compression
tokio-tar.workspace = true
async-compression.workspace = true
zip.workspace = true
async_zip.workspace = true

# Async Utilities
futures-util.workspace = true

# Chemins & Noms de fichiers
directories.workspace = true
sanitize-filename.workspace = true
path-absolutize.workspace = true

# Système & OS
os_info.workspace = true

# Utilities
once_cell.workspace = true

# Hashing
sha1.workspace = true
hex.workspace = true

[features]
events = ["lighty-event"]
tracing = ["dep:tracing"]
