[package]
name = "lighty-event"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Event system for LightyLauncher"

[dependencies]
tokio = { version = "1.52", features = ["sync"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
once_cell = "1.21"
