[package]
name = "lighty-launch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Minecraft launch logic for Lighty Launcher"

[dependencies]
# Workspace crates
lighty-core = { workspace = true }
lighty-java = { workspace = true }
lighty-version = { workspace = true }
lighty-loaders = { workspace = true }
lighty-auth = { workspace = true }
lighty-event = { workspace = true, optional = true }

# Async Runtime
tokio.workspace = true

# HTTP Client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async Utilities
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio-util.workspace = true

# Error Handling
thiserror.workspace = true

# Logging
tracing = { workspace = true, optional = true }

# Filesystem & Compression
async_zip.workspace = true

# Cryptography
sha1.workspace = true
hex.workspace = true

# Paths & Filenames
directories.workspace = true
sanitize-filename.workspace = true

# Utilities
once_cell.workspace = true
fastrand.workspace = true

# Windows API (conditional)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

# Unix API (conditional)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["signal", "process"] }

[features]
default = []
events = ["lighty-event", "lighty-java/events", "lighty-core/events"]
# Required so the installer can run NeoForge post-install processors
neoforge = ["lighty-loaders/neoforge"]
# Required so the installer can run Forge post-install processors
forge = ["lighty-loaders/forge"]
