[package]
name = "lighty-loaders"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Minecraft mod loaders support for Lighty Launcher"

[dependencies]
# Workspace crates
lighty-core = { workspace = true }

# Async Runtime
tokio.workspace = true

# HTTP Client
reqwest.workspace = true

# Sérialisation
serde.workspace = true
serde_json.workspace = true

# Async Utilities
futures.workspace = true
async-trait.workspace = true

# Error Handling
thiserror.workspace = true

# Logging
tracing = { workspace = true, optional = true }

# Filesystem & Compression
zip.workspace = true
async_zip.workspace = true
memmap2.workspace = true

# Chemins & Noms de fichiers
directories.workspace = true

# Utilities
once_cell.workspace = true
version-compare.workspace = true

[features]
vanilla = []
fabric = ["vanilla"]
quilt = ["vanilla"]
neoforge = ["vanilla"]
forge = ["vanilla"]
forge_legacy = ["forge"]
lighty_updater = ["vanilla", "fabric", "quilt", "neoforge", "forge"]
all-loaders = ["vanilla", "fabric", "quilt", "neoforge", "forge", "lighty_updater"]
default = []
