[package]
name = "lighty-loaders"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Minecraft mod loaders support for Lighty Launcher"

[dependencies]
# Workspace crates
lighty-core = { workspace = true }

# Async Runtime
tokio.workspace = true

# HTTP Client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async Utilities
futures.workspace = true
async-trait.workspace = true

# Error Handling
thiserror.workspace = true

# Logging
tracing = { workspace = true, optional = true }

# Filesystem & Compression
zip.workspace = true
async_zip.workspace = true
memmap2.workspace = true

# Utilities
once_cell.workspace = true
version-compare.workspace = true

[features]
vanilla = []
fabric = ["vanilla"]
quilt = ["vanilla"]
neoforge = ["vanilla"]
forge = ["vanilla"]
lighty_updater = ["vanilla", "fabric", "quilt", "neoforge", "forge"]
# Mod-source clients (Modrinth public API, CurseForge keyed API).
modrinth = ["vanilla"]
curseforge = ["vanilla"]
all-mods = ["modrinth", "curseforge"]
all-loaders = ["vanilla", "fabric", "quilt", "neoforge", "forge", "lighty_updater", "all-mods"]
default = []
